--- a/package.json
+++ b/package.json
@@ -9,16 +9,19 @@
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
     "bootstrap": "4.3.1",
+    "file-loader": "^6.0.0",
     "immer": "2.1.3",
     "prop-types": "15.7.2",
     "react": "16.8.4",
+    "react-color": "^2.18.0",
     "react-dom": "16.8.4",
     "react-redux": "6.0.1",
     "react-router-dom": "5.0.0",
     "react-toastify": "4.5.2",
     "redux": "4.0.1",
     "redux-thunk": "2.3.0",
-    "reselect": "4.0.0"
+    "reselect": "4.0.0",
+    "url-loader": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.3.4",
